[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/Bullet.png" type="Texture" id=1]
[ext_resource path="res://src/entities/EnemyBullet.gd" type="Script" id=2]
[ext_resource path="res://assets/img/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="EnemyBullet" type="Area2D" groups=[
"bullets",
"enemy_bullets",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
scale = Vector2( 0.160005, 0.159904 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
texture = ExtResource( 3 )
texture_scale = 0.2
color = Color( 1, 0.227451, 0.227451, 1 )
energy = 0.5
[connection signal="area_entered" from="." to="." method="_on_EnemyBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
